--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
@@ -17,6 +17,14 @@
             android:layout_alignParentTop="true"
             android:background="@color/menu_black">
 
+            <Button
+                android:id="@+id/backBtn"
+                android:layout_width="82px"
+                android:layout_height="82px"
+                android:layout_centerVertical="true"
+                android:background="@drawable/back_btn_selector"
+                android:tag="mwar"/>
+
             <TextView
                 android:id="@+id/textViewTitle"
                 android:layout_width="wrap_content"
@@ -41,6 +49,7 @@
             android:layout_above="@+id/submitButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white_light_more_grey"
             android:orientation="vertical">
 
         </LinearLayout>
