--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="720px"
     android:layout_height="1134px"
-    android:background="@drawable/spalsh_new_background"
+    android:background="@drawable/splash_new_background"
     android:orientation="vertical"
     android:splitMotionEvents="false">
 
@@ -28,7 +28,7 @@
         <RelativeLayout
             android:id="@+id/jugnooTextImgRl"
             android:layout_width="390px"
-            android:layout_height="390px"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="340px"
             android:tag="mwar"
@@ -49,18 +49,8 @@
                 android:layout_width="90px"
                 android:layout_height="90px"
                 android:src="@drawable/transparent"
-
                 />
 
-            <ImageView
-                android:id="@+id/jugnooAutoImg"
-                android:layout_width="387px"
-                android:layout_height="252px"
-                android:layout_marginTop="80px"
-                android:layout_below="@+id/jugnooTextImg2"
-                android:src="@drawable/auto_icon"
-
-                />
         </RelativeLayout>
 
         <ProgressBar
@@ -106,4 +96,5 @@
 
 
     </RelativeLayout>
+
 </LinearLayout>
