--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_mark_delivery.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_mark_delivery.xml
@@ -27,7 +27,7 @@
                 android:gravity="center">
 
                 <ImageView
-                    android:layout_width="120px"
+                    android:layout_width="match_parent"
                     android:layout_height="2px"
                     android:id="@+id/imageViewHorizontal1"
                     android:layout_centerVertical="true"
@@ -37,8 +37,9 @@
                     android:id="@+id/textViewOrderId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/imageViewHorizontal1"
+                    android:background="@color/white"
                     android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
                     android:lineSpacingExtra="10px"
                     android:paddingLeft="20px"
                     android:paddingRight="20px"
@@ -46,13 +47,13 @@
                     android:textColor="@color/black"
                     android:textSize="48px"/>
 
-                <ImageView
-                    android:layout_width="120px"
-                    android:layout_height="2px"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/textViewOrderId"
-                    android:id="@+id/imageViewHorizontal2"
-                    android:background="@color/black"/>
+                <!--<ImageView-->
+                    <!--android:layout_width="120px"-->
+                    <!--android:layout_height="2px"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_toRightOf="@+id/textViewOrderId"-->
+                    <!--android:id="@+id/imageViewHorizontal2"-->
+                    <!--android:background="@color/black"/>-->
 
             </RelativeLayout>
 
@@ -135,6 +136,7 @@
                         android:text="@string/get_directions"
                         android:layout_marginTop="18px"
                         android:layout_gravity="center_horizontal"
+                        android:gravity="center"
                         android:textColor="@color/new_orange"
                         android:textSize="32px"/>
 
@@ -241,7 +243,7 @@
                 android:visibility="visible">
 
                 <ImageView
-                    android:layout_width="220px"
+                    android:layout_width="match_parent"
                     android:layout_height="2px"
                     android:id="@+id/imageViewHorizontal3"
                     android:layout_centerVertical="true"
@@ -252,9 +254,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/imageViewHorizontal3"
                     android:gravity="center"
+                    android:layout_centerHorizontal="true"
                     android:text="@string/take_cash"
+                    android:background="@color/white"
                     android:lineSpacingExtra="10px"
                     android:maxHeight="800px"
                     android:paddingLeft="20px"
@@ -264,13 +267,13 @@
 
                     />
 
-                <ImageView
-                    android:layout_width="220px"
-                    android:layout_height="2px"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/textViewTakeCash"
-                    android:id="@+id/imageViewHorizontal4"
-                    android:background="@color/black"/>
+                <!--<ImageView-->
+                    <!--android:layout_width="220px"-->
+                    <!--android:layout_height="2px"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_toRightOf="@+id/textViewTakeCash"-->
+                    <!--android:id="@+id/imageViewHorizontal4"-->
+                    <!--android:background="@color/black"/>-->
 
             </RelativeLayout>
 
