feature_upload_doccument: multilingual shifted to splashNewActivity

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -31,7 +31,7 @@
             android:layout_marginRight="5px"
             android:layout_marginTop="3px"
             android:background="@drawable/background_white_rounded_orange_bordered"
-            android:visibility="gone">
+            android:visibility="visible">
 
 
             <ImageView
