--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -8,6 +8,56 @@
     android:orientation="vertical"
     android:splitMotionEvents="false">
 
+    <RelativeLayout
+        android:id="@+id/selectLanguageLl"
+        android:layout_width="320px"
+        android:layout_height="80px"
+        android:layout_marginLeft="360px"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5px"
+        android:layout_marginTop="25px"
+        android:background="@drawable/background_translucent_white_rounded_orange_bordered"
+        android:visibility="visible">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="6px"
+            android:visibility="gone"
+            android:background="@drawable/language_icon"/>
+
+        <ImageView
+            android:layout_width="2px"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="6px"
+            android:visibility="gone"
+            android:background="@color/new_orange"/>
+
+
+        <Spinner
+            android:id="@+id/language_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent"
+            android:popupBackground="@drawable/background_white_rounded_orange_bordered"
+            android:textAlignment="center"/>
+
+
+        <ImageView
+            android:layout_width="30px"
+            android:layout_height="22px"
+            android:layout_marginRight="15px"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/white_arrow_down"/>
+
+
+
+    </RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,7 +71,7 @@
             android:layout_height="270px"
             android:layout_centerHorizontal="true"
             android:background="@drawable/jugnoo_white_logo"
-            android:layout_marginTop="200px"
+            android:layout_marginTop="100px"
             android:tag="mwar"
             android:visibility="visible" />
 
@@ -30,7 +80,7 @@
             android:layout_width="390px"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="340px"
+            android:layout_marginTop="240px"
             android:tag="mwar">
 
             <ImageView
