--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -125,7 +125,7 @@
                 android:layout_marginRight="42px"
                 android:id="@+id/imageViewHorizontal5"
                 android:layout_gravity="center_vertical"
-                android:background="@color/black"/>
+                android:background="@color/grey_dark_less"/>
 
             <TextView
                 android:id="@+id/textViewDistancePKm"
@@ -144,7 +144,7 @@
                 android:layout_marginRight="45px"
                 android:id="@+id/imageViewHorizontal4"
                 android:layout_gravity="center_vertical"
-                android:background="@color/black"/>
+                android:background="@color/grey_dark_less"/>
 
             <TextView
                 android:id="@+id/textViewTimePKm"
@@ -158,9 +158,16 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:layout_width="670px"
+            android:layout_height="2px"
+            android:id="@+id/imageViewHorizontal6"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/grey_dark_less"/>
+
         <RelativeLayout
             android:layout_width="672px"
-            android:layout_height="110px"
+            android:layout_height="108px"
             android:layout_gravity="center"
             android:background="@color/white">
 
@@ -232,7 +239,96 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="230px"
+        android:orientation="vertical"
         android:background="@drawable/background_grey_rounded_orange_bordered_4px">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="116px"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewDtoC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30px"
+                android:text="@string/driver_to_customer"
+                android:textColor="@color/black"
+                android:textSize="34px"/>
+
+            <ImageView
+                android:layout_width="2px"
+                android:layout_height="84px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="42px"
+                android:id="@+id/imageViewHorizontal7"
+                android:layout_gravity="center_vertical"
+                android:background="@color/grey_dark_less"/>
+
+            <TextView
+                android:id="@+id/textViewDtoD"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:text="@string/driver_to_driver"
+                android:textColor="@color/black"
+                android:textSize="34px"/>
+
+
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="670px"
+            android:layout_height="2px"
+            android:id="@+id/imageViewHorizontal6"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/grey_dark_less"/>
+
+        <RelativeLayout
+            android:layout_width="672px"
+            android:layout_height="108px"
+            android:layout_gravity="center"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/textViewBaseFareValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="80px"
+                android:text="00"
+                android:textColor="@color/black"
+                android:textSize="34px"/>
+
+            <TextView
+                android:id="@+id/textViewDistancePKmValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:textColor="@color/black"
+                android:textSize="34px"/>
+
+
+            <TextView
+                android:id="@+id/textViewTimePKmValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="70px"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:text="00"
+                android:textColor="@color/black"
+                android:textSize="34px"/>
+
+        </RelativeLayout>
+
 
     </LinearLayout>
 
