develop_new: driver 246 Live changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -409,7 +409,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:splitMotionEvents="false"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         >
 
                         <ImageView
